# internal/server/http/user/handler.go
@@ -2,8 +2,15 @@ package user
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/sirupsen/logrus"
+
 	"repositorie/internal/service"
 )
+
+var log = logrus.WithFields(logrus.Fields{
+	"package": "auth",
+	"layer":   "server",
+})
 
 type Handler struct {
 	Service service.UserService
@@ -17,4 +24,7 @@ func (h *Handler) InitRoutes(r gin.IRouter) {
 	group := r.Group("/users")
 
 	group.GET("/me", h.me)
+	group.GET("/search/:query", h.search)
+	group.GET("/settings", h.settings)
+	group.PUT("/update", h.update)
 }
